platform/storage/longhorn/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/whitelist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8"
    haproxy-ingress.github.io/server-protocol: "h2"
    haproxy-ingress.github.io/secure-backends: "false"
spec:
  ingressClassName: haproxy-restricted
  tls:
  - hosts:
    - longhorn.rcrumana.xyz
    secretName: longhorn-ui-tls
  rules:
  - host: longhorn.rcrumana.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
